2010-09-21 Roman
- UI.WebVision: The opened sessions limit is added. Detailed all opened sessions info is added for user "root" and users into group "root".


2010-09-20 Roman
- DB: The subsystem's option "SYSStPref" is added for disable using the station id prefix into generic table allow.
- DB,Security: The control interface's permitions is made unified.
- Security: Groups selection allow is added into user-page.
- !!:Protocol.HTTP: Auto-login support is added.
- FIX:UI.WebCfgD, UI.WebVision: HTTP-field "Content-Type" generation is fixed for charset.
    For now charset is correct for all supported browsers.
- FIX:UI.WebVision: Image update for primitive "Diagram" is made adaptive for real images loading, use for prevent to server overload.
    Result for event onmouseup process set to "true" for images suffice prevent into browser Konqueror.
- !!:UI.WebVision: Sessions access and control is adapted for sender use.
- !!:Transport.SSL: Get sender address support is added.


2010-09-13 Roman
- !!!!:SYS: OpenSCADA core library version is rised to 1:0:0
- !!!!:SYS: OpenSCADA core librarie's code is moved to namespace OSCADA
- !:SYS: To node name call function is changed to const string &TCntrNode::nodeName( )
- !!:Modules: Module check and init code is updated for exclude shared libraries init twice.
    Error set is added for loaded modules.
- SYS: Remove function TSYS::fNameFix();
- UI.QTStarter, UI.QTCfg, UI.Vision: QT compile options updated to last QT4 versions.


2010-09-09 Roman
- FIX:DemoDB: The script of main project page is fixed for SO names set.
- FIX:UI.VCAEngine: Session start/stop and enable/disable at module start/stop is fixed.
- FIX:UI.Vision: Include page of run session deletion is fixed on master page early delete.


2010-09-08 Roman
- FIX:DemoDB: Pipes gradient is fixed for rotated angles. Some other fixes.
- !!:DemoDB: The script of main project page is rewrited to use new user's API object's functions.