@@ -2753,8 +2753,7 @@ void ConfApp::imgPopup( const QPoint &pos )
 		int hd = open(fileName.toAscii().data(),O_RDONLY);
 		if( hd < 0 )	throw TError(mod->nodePath().c_str(),_("Open file %s error\n"),fileName.toAscii().data());
 		{
-		    while( len = read(hd,buf,sizeof(buf)) )
-		        rez.append(buf,len);
+		    while((len=read(hd,buf,sizeof(buf))) > 0) rez.append(buf,len);
 		    ::close(hd);
 		}
 
