@@ -258,7 +258,7 @@ void *TUIMod::Task( void * )
     QtApp->installTranslator(&translator);
 
     //> Start splash create
-    if( !ico_t.load(TUIS::icoPath("splash").c_str()) )	ico_t.load(":/images/splash.png");
+    if( !ico_t.load(TUIS::icoPath(SYS->id()+"_splash").c_str()) )	ico_t.load(":/images/splash.png");
     QSplashScreen *splash = new QSplashScreen(QPixmap::fromImage(ico_t));
     splash->show();
 
