@@ -204,8 +204,8 @@ void WidgetLib::mimeDataList( vector<string> &list, const string &idb )
 
 bool WidgetLib::mimeDataGet( const string &iid, string &mimeType, string *mimeData, const string &idb )
 {
-    bool is_file = (iid.size()>5 && iid.substr(0,5) == "file:");
-    bool is_res  = (iid.size()>4 && iid.substr(0,4) == "res:");
+    bool is_file = (iid.compare(0,5,"file:")==0);
+    bool is_res  = (iid.compare(0,4,"res:")==0);
 
     if( !is_file )
     {
@@ -231,13 +231,14 @@ bool WidgetLib::mimeDataGet( const string &iid, string &mimeType, string *mimeDa
 	char buf[STR_BUF_LEN];
 	string rez;
 	int hd = open(filepath.c_str(),O_RDONLY);
-	if( hd == -1 )	return false;
+	if(hd == -1)	return false;
 
-	while( len = read(hd,buf,sizeof(buf)) ) rez.append(buf,len);
+	while((len=read(hd,buf,sizeof(buf))) > 0) rez.append(buf,len);
 	close(hd);
 
 	mimeType = ((filepath.rfind(".") != string::npos) ? filepath.substr(filepath.rfind(".")+1)+";" : "file/unknown;")+TSYS::int2str(rez.size());
 	if( mimeData )	*mimeData = TSYS::strEncode(rez,TSYS::base64);
+
 	return true;
     }
 
